<resources>
    <string name="app_name">BioLabApp</string>
    <string name="txt_field_main">0000</string>
    <string name="label_guest">STD</string>
    <string name="txt_insert_id">Insert ID</string>
    <string name="labelsample">ID Sample: </string>
    <string name="labelsoluble">Soluble: </string>
    <string name="labelnotes">Notes: </string>
    <string name="cell_line">Cell Line</string>
    <string name="gL50">Gl50</string>
    <string name="id_exp">Id Exp: </string>
    <string name="userlogin">User</string>
    <string name="guest">Guest</string>
    <string name="insertemail">Email</string>
    <string name="insetpassword">Password</string>
    <string name="registermsg">Don´t have an existing account?</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Repeat Password</string>
    <string name="logout">LogOut</string>
    <string name="qrcode">Scan QR Code</string>
    <string name="examplehint">Ex: 0000</string>


</resources>
