<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#840394"
    android:focusable="auto"
    android:focusableInTouchMode="false"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:id="@+id/biolablogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bio_lab_logo" />

    <ImageView
        android:id="@+id/textv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bio_lab_app_v1" />

    <EditText
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/insertemail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biolablogo" />

    <EditText
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/insetpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_tv"
        app:layout_constraintVertical_bias="0.136" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="39dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/email_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_white" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/password_tv"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/key_white" />

    <Button
        android:id="@+id/button"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/text_field"
        android:fontFamily="monospace"
        android:onClick="clickLogin"
        android:text="@string/login"
        android:textColor="#840394"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_tv" />

    <Button
        android:id="@+id/button2"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_field"
        android:fontFamily="monospace"
        android:onClick="clickRegister"
        android:text="@string/register"
        android:textColor="#840394"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell_line_tv" />

    <TextView
        android:id="@+id/cell_line_tv"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/registermsg"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>